--- a/build.config
+++ b/build.config
@@ -30,13 +30,13 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 CONFIG_FIRMWARE_ENABLE_USB=y
 
 ### Enable NTFS filesystem support via Paragon "ufsd" driver. ~0.4MB
-CONFIG_FIRMWARE_ENABLE_UFSD=y
+#CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
-CONFIG_FIRMWARE_ENABLE_FAT=y
+#CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support. ~0.12MB
-CONFIG_FIRMWARE_ENABLE_EXFAT=y
+#CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
 ### Enable EXT2 filesystem support. ~0.1MB
 #CONFIG_FIRMWARE_ENABLE_EXT2=y
@@ -87,13 +87,13 @@ CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
 ### Include NFSv3 server. ~0.6MB
-CONFIG_FIRMWARE_INCLUDE_NFSD=y
+#CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
 ### Include NFSv3 client. ~0.5MB
-CONFIG_FIRMWARE_INCLUDE_NFSC=y
+#CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_CIFS=y
+#CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ### Include Shortcut Forward Engine
 CONFIG_FIRMWARE_INCLUDE_SHORTCUT_FE=y
@@ -127,10 +127,10 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 #CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
 
 ### Include LPR printer daemon. ~0.12MB
-CONFIG_FIRMWARE_INCLUDE_LPRD=y
+#CONFIG_FIRMWARE_INCLUDE_LPRD=y
 
 ### Include USB-over-Ethernet printer daemon. ~0.05MB
-CONFIG_FIRMWARE_INCLUDE_U2EC=y
+#CONFIG_FIRMWARE_INCLUDE_U2EC=y
 
 ### Include "tcpdump" utility. ~0.6MB
 CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
@@ -142,23 +142,23 @@ CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 #CONFIG_FIRMWARE_INCLUDE_NDISC6_RDISC6=y
 
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_HDPARM=y
+#CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 
 ### Include "parted" utility (allow make GPT partitions). ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_PARTED=y
 
 ### Include SMB (and WINS) server. ~1.5MB
-CONFIG_FIRMWARE_INCLUDE_SMBD=y
+#CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
 ### Include WINS server only. ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_WINS=y
 
 ### Include syslog for SMB and WINS server. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
+#CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 
 ### Include FTP server. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_FTPD=y
-CONFIG_FIRMWARE_INCLUDE_FTPD_SSL=y
+#CONFIG_FIRMWARE_INCLUDE_FTPD=y
+#CONFIG_FIRMWARE_INCLUDE_FTPD_SSL=y
 
 ### Include alternative L2TP control client RP-L2TP. ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
@@ -185,7 +185,7 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+#CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
 #CONFIG_FIRMWARE_INCLUDE_SSWAN=y
@@ -203,22 +203,22 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+#CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include Minidlna UPnP mediaserver. ~1.6MB
-CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
+#CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
+#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
-CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
+#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
-CONFIG_FIRMWARE_INCLUDE_ARIA=y
+#CONFIG_FIRMWARE_INCLUDE_ARIA=y
 
 ### Include Aria2 WEB control. ~0.7MB
-CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
+#CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 
 ### Include TOR proxy ~2.8MB
 #CONFIG_FIRMWARE_INCLUDE_TOR=y
@@ -263,7 +263,7 @@ CONFIG_FIRMWARE_INCLUDE_EOIP=y
 CONFIG_FIRMWARE_INCLUDE_CURL=y
 
 ### Include KMS Activation support ~0.06MB
-CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
+#CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
 
 ### Include iPerf3 support ~0.13MB
 CONFIG_FIRMWARE_INCLUDE_IPERF3=y
